--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -1039,5 +1039,6 @@ div {
 @media only screen and (max-width: 600px) {
     #fog {
         width: 100% !important;
+        height: 65vh !important;
     }
 }
